<resources>
    <string name="app_name">QR Scanner</string>


    <!-- Pantalla main-->
    <string name="titDialogWeb">WEB</string>
    <string name="txtDialogWeb">Do you want to access the url</string>
    <string name="txtPermiso">In order to use the App, you must allow to use the camera</string>
    <string name="txtPermiso2">To use this option you must allow to create files</string>
    <string name="btnSi">Yes</string>
    <string name="btnNo">No</string>
    <string name="btnAceptar">Accept</string>
    <string name="txtErrorWeb">Error, URL formatted incorrectly</string>
    <string name="txtErrorWifi">In order to connect to this Wi-Fi network it is necessary that you activate the Wi-Fi on the Device</string>
    <string name="titDialogLlamada">CALL</string>
    <string name="txtDialogLlamada">Do you want to call</string>
    <string name="titDialogMapa">MAP</string>
    <string name="txtDialogMapa">Do you want to see the location on the map?\n\n</string>
    <string name="txtLatitud">Latitude:</string>
    <string name="txtLongitud">\nLongitude</string>
    <string name="titDialogSms">SMS</string>
    <string name="txtDialogSms">Do you want to send the SMS message?</string>
    <string name="txtDialogSms2">\nPhone:</string>
    <string name="titDialogEmail">EMAIL</string>
    <string name="txtDialogEmail">Do you want to send the Email?\n\nTo:</string>
    <string name="titDialogAgenda">CONTACT</string>
    <string name="txtDialogAgenda">Do you want to add contact information?</string>
    <string name="titDialogTexto">TEXT</string>
    <string name="txtDialogTexto">Text contained in the Code:\n\n</string>
    <string name="txtEscanear">Scan</string>
    <string name="titDialogWifi">WIFI</string>
    <string name="txtDialogWifi">Do you want to add this Wifi Network?</string>
    <string name="txtDialogWifi2">\n\nSSID:</string>
    <string name="txtDialogWifi3">\nPassword:</string>
    <string name="txtWifiOk">The Wifi Network was created and saved</string>
    <string name="txtTipoCodigoQR">QR Code: --</string>
    <string name="txtTipoCodigoQR_1">QR Code: Url</string>
    <string name="txtTipoCodigoQR_2">QR Code: Call</string>
    <string name="txtTipoCodigoQR_3">QR Code: Map</string>
    <string name="txtTipoCodigoQR_4">QR Code: Sms</string>
    <string name="txtTipoCodigoQR_5">QR Code: Email</string>
    <string name="txtTipoCodigoQR_6">QR Code: Contact</string>
    <string name="txtTipoCodigoQR_7">QR Code: Text</string>
    <string name="txtTipoCodigoQR_8">QR Code: Wifi</string>
    <!-- Fin Pantalla Main-->


    <!-- Pantalla Info -->
    <string name="titPantallaInfo">Info</string>
    <string name="txtPantallaInfo">Made by Angel Acuña \n drusa.soft@gmail.com</string>
    <string name="txtMenuInfo">Privacy Policies</string>
    <!-- Fin Pantalla Info-->


    <!-- Pantalla Seleccionar Posicion-->
    <string name="titPantallaSelecPosicion">Map</string>
    <string name="txtPosicion">Coordinates</string>
    <string name="txtDialogCoordenadas">Do you want to use these coordinates?\n\n</string>
    <string name="txtErrorMapa">In order to display the map, an Internet connection is required</string>
    <!-- Fin Pantalla Seleccionar Posicion-->


    <!--Pantalla Mapa-->
    <string name="txtDireccion">Address</string>
    <string name="txtErrorMapa_1">The address could not be obtained</string>
    <string name="txtErrorMapa_2">To be able to show the location correctly, it is necessary to connect to the Internet</string>
    <string name="txtMenuMapa_1">Normal View</string>
    <string name="txtMenuMapa_2">Hybrid View</string>
    <string name="txtMenuMapa_3">Satellite View</string>
    <string name="txtMenuMapa_4">Terrain View</string>
    <string name="txtInfoMapa">To get the coordinates, long press on the desired point</string>
    <!-- Fin Pantalla Mapa-->


    <!-- Fragment QRScanner-->
    <string name="txtErrorFragmentQRScanner">Error, the capture could not be made</string>
    <!-- Fin Fragment QRScanner-->

    <!-- Pantalla QRCreator-->
    <string name="titPantallaQrCreator">QR Creator</string>
    <string name="titTipoCodigoQR">Type Code</string>
    <string name="titDialogGuardar">Save Code</string>
    <string name="titCodigoTexto">Data Code</string>
    <string name="titIrMapa">Select position on Map</string>
    <string name="chipTexto">Text</string>
    <string name="chipUrl">Url</string>
    <string name="chipSms">Sms</string>
    <string name="chipGeo">Geo</string>
    <string name="chipEmail">Email</string>
    <string name="chipLlamada">Phone</string>
    <string name="hintNombreCodigoQR">Code Name</string>
    <string name="hintTextoCodigoQR">Enter Text</string>
    <string name="hintUrlCodigoQR">Enter Url</string>
    <string name="hintSmsCodigoQR_1">Enter Phone</string>
    <string name="hintSmsCodigoQR_2">Enter Text</string>
    <string name="hintEmailCodigoQR_1">To</string>
    <string name="hintEmailCodigoQR_2">Subject</string>
    <string name="hintEmailCodigoQR_3">Enter Body</string>
    <string name="hintTelfCodigoQR">Enter Phone</string>
    <string name="hintGeoCodigoQR_1">Enter Latitude</string>
    <string name="hintGeoCodigoQR_2">Enter Longitude</string>
    <string name="btnCrear">Create</string>
    <string name="btnCerrar">Close</string>
    <string name="txtGuardadoOK">The QR Code has been saved correctly</string>
    <string name="errorCrearCodigoQR">Error, Could not create QR Code</string>
    <string name="errorTextoCodigoQR">You must enter a valid text</string>
    <string name="errorUrlCodigoQR">You must enter a valid Url</string>
    <string name="errorSmsCodigoQR">You must enter all the data (Telephone and Text)</string>
    <string name="errorEmailCodigoQR">You must enter the email recipient</string>
    <string name="errorTelfCodigoQR">You must enter the phone number</string>
    <string name="errorGeoCodigoQR">You must enter Latitude and Longitude</string>
    <string name="errorAccesoTarjetaSD">Access Error, The QR Code could not be saved</string>
    <string name="errorCompartirCodigoQR">Error Sharing, The QR Code could not be saved</string>
    <string name="errorGuardarCodigoQR">Error, No se ha podido guardar el Código QR</string>
    <string name="errorNombreCodigoQR">Debes introducir un nombre para el CodigoQR creado</string>
    <string name="txtTipoCodigoTexto">Text</string>
    <string name="txtTipoCodigoUrl">Url</string>
    <string name="txtTipoCodigoSms">Sms</string>
    <string name="txtTipoCodigoEmail">Email</string>
    <string name="txtTipoCodigoTelf">Phone</string>
    <string name="txtTipoCodigoGeo">Geolocation</string>
    <string name="menu_guardar">Save</string>
    <string name="menu_compartir">Share</string>
    <string name="menu_borrar">Discard</string>
    <!-- Fin Pantalla QRCreator-->

    <!--Pantalla Lista QR-->
    <string name="titPantallaListaQR">QR List</string>
    <string name="txtListaVacia">You currently have no saved QR Code</string>
    <string name="txtListaNoVacia">The QR codes are stored in a folder called QRScanner, within the file system of your device.</string>
    <string name="errorEliminarCodigo">Error, could not delete the QR Code</string>
    <string name="errorMostrarCodigo">Error, this CodeQR could not be loaded</string>
    <string name="titDialogEliminar">Delete...</string>
    <string name="txtDialogEliminar">Do you want to delete the selected QR codes?</string>
    <!--Fin Pantalla Lista QR-->

    <!-- Pantalla CodigoQR-->
    <string name="titPantallaCodigo">QR Code</string>
    <string name="txtNombreCodigo">Name:</string>
    <string name="txtTipoCodigo">Type:</string>
    <string name="txtFechaCodigo">Date:</string>
    <string name="errorCompartirCodigoQR_2">Error Sharing, Could not get image from QR Code</string>
    <string name="errorCompartirCodigoQR_3">Error, It is not possible to share the QR Code</string>
    <!-- Fin Pantalla CodigoQR-->


</resources>
