<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/textura_transparente_2">


    <TextView
        android:id="@+id/titCodigoGeo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:text="@string/titCodigoTexto"
        android:textColor="@color/colorAmarillo"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/colorAmarillo"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titIrMapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_texto"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:text="@string/titIrMapa"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_mapmode"
            android:tint="@color/colorAmarillo"/>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/AppTheme.TextInputLayoutAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/hintGeoCodigoQR_1"
        android:textColorHint="@color/color_texto_hint_2"
        app:hintTextColor="@color/color_texto_hint"
        app:boxStrokeColor="@color/color_text_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLatitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:inputType="text"
            android:textColor="@color/colorAmarillo"
            android:textCursorDrawable="@color/colorAmarillo"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/AppTheme.TextInputLayoutAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/hintGeoCodigoQR_2"
        android:textColorHint="@color/color_texto_hint_2"
        app:hintTextColor="@color/color_texto_hint"
        app:boxStrokeColor="@color/color_text_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLongitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:inputType="text"
            android:textColor="@color/colorAmarillo"
            android:textCursorDrawable="@color/colorAmarillo"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCrearCodigoGeo"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/colorAmarillo"
        android:textStyle="bold"
        android:text="@string/btnCrear"
        app:icon="@mipmap/ic_qr_skull"
        app:iconTint="@color/colorAmarillo"
        app:rippleColor="@color/colorAmarillo"
        app:strokeColor="@color/colorAmarillo"/>

</LinearLayout>