<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/textura_dialog">


    <TextView
        android:id="@+id/titDialogGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/titDialogGuardar"
        android:textColor="@color/colorHint"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/colorHint"/>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/AppTheme.TextInputLayoutAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/hintNombreCodigoQR"
        app:boxStrokeColor="@color/color_text_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:inputType="text"
            android:textColor="@color/colorAmarillo"
            android:textCursorDrawable="@color/colorAmarillo"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAceptarDialogGuardar"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorAmarillo"
        android:textStyle="bold"
        android:text="@string/btnAceptar"
        app:iconTint="@color/colorAmarillo"
        app:rippleColor="@color/colorAmarillo"
        app:strokeColor="@color/colorAmarillo"/>



</LinearLayout>